[gd_scene load_steps=6 format=2]

[ext_resource path="res://visuals/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/control_remap.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/lod = 1.813

[node name="ControlRemap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -94.0
margin_right = 228.0
margin_bottom = 58.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 456.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 226.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "ACTION"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "KEY"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 456.0
margin_bottom = 58.0

[node name="HboxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 456.0
margin_bottom = 112.0

[node name="Action" type="Label" parent="VBoxContainer/HboxContainer2"]
margin_right = 226.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "jump"
align = 1

[node name="ActionKey" type="Label" parent="VBoxContainer/HboxContainer2"]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 127.0
margin_right = 456.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 25 )

[node name="RemapBtn" type="Button" parent="VBoxContainer"]
margin_left = 128.0
margin_top = 167.0
margin_right = 328.0
margin_bottom = 212.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "REMAP"

[node name="HboxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 227.0
margin_right = 456.0
margin_bottom = 266.0

[node name="Label" type="Label" parent="VBoxContainer/HboxContainer3"]
margin_right = 226.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Action pressed"
align = 1

[node name="ActionPressed" type="Label" parent="VBoxContainer/HboxContainer3"]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "false"
align = 1

[node name="Popup" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.556863 )

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.152941, 0.152941, 0.2 )

[node name="Label" type="Label" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -19.5
margin_right = 113.0
margin_bottom = 19.5
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color_shadow = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "PRESS A KEY"
align = 1

[connection signal="pressed" from="VBoxContainer/RemapBtn" to="." method="_on_RemapBtn_pressed"]
